# hello-llvm

./: .gitignore  CMakeLists.txt  Makefile
src/: main.cpp
